--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,9 +6,7 @@
 
 
 <div class="completed">
-  <p><%= check_box(@task, @task.id, {checked: @task.completed})%>
-    <%= @task.completed ? "This task is completed." : "This task is not yet completed." %>
-  </p>
+  <p><%= @task.completed ? "✅ This task is completed." : "❎ This task is not yet completed." %></p>
 </div>
 
 <p><%= link_to "Update the task", edit_task_path(@task) %></p>
