add bootstrap and simple form

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,22 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.card {
-  width: 500px;
-  border: 1px solid lightgrey;
-  border-radius: 10px;
-  background-color: black;
-  color:white;
-  padding: 10px;
-  margin: 30px 20px;
-}
+// .card {
+//   width: 500px;
+//   border: 1px solid lightgrey;
+//   border-radius: 10px;
+//   background-color: black;
+//   color:white;
+//   padding: 10px;
+//   margin: 30px 20px;
+// }
 
 
-form {
-  margin: 20px;
-}
+// form {
+//   margin: 20px;
+// }
 
-.container {
-  width: 600px;
-  margin:30px auto;
-}
+// .container {
+//   width: 600px;
+//   margin:30px auto;
+// }
