--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Here is your todo list:</h1>
 
-<ul>
+<ul class="list-group list-group-flush">
   <% @tasks.each do |task| %>
-    <li><%= task.completed ? "✅" : "❎" %> <%= link_to task.title, task_path(task) %>
+    <li class="list-group-item"><%= task.completed ? "✅" : "❎" %> --- <%= link_to task.title, task_path(task) %>
     <%= link_to "🗑",
               task_path(task),
               method: :delete,
