--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,11 +1,5 @@
 <h2>Add your new task here</h2>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :detail %>
-  <%= f.text_field :detail %>
-  <%= f.submit %>
-<% end %>
+<%= render "form", task: @task %>
 
 <%= link_to "Back to the list", tasks_path %>
